--- a/YFF-React-Project/my-react-app/src/NavBar/navBar.css
+++ b/YFF-React-Project/my-react-app/src/NavBar/navBar.css
@@ -1,8 +1,15 @@
-@media (max-width: 1023px) {
-  .navbar-right .login-button,
-  .navbar-right .signup-button {
-    display: none;
-  }
+:root {
+  --navbar-bg: #333;
+  --navbar-text: #fff;
+  --border-color: #ccc;
+  --navbar-height: 60px;
+  --breakpoint-desktop: 1024px;
+  color-scheme: light dark;
+}
+
+.navbar-right .signup-button,
+.navbar-right .login-button {
+  display: none;
 }
 
 @media (min-width: 1024px) {
@@ -10,9 +17,6 @@
   .navbar-right .signup-button {
     display: inline-block;
   }
-}
-
-@media (min-width: 1024px) {
   .hamburger-menu {
     display: none;
   }
@@ -25,33 +29,41 @@
 
 .navbar {
   display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  background: #333;
-  color: #fff;
-  padding: 1rem;
+  align-items: center;
+  background: var(--navbar-bg);
+  color: var(--navbar-text);
+  padding: 0.3rem;
+  height: var(--navbar-height);
+  justify-content: space-around;
 }
 
 .navbar-center,
 .navbar-right,
 .navbar-left {
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  margin-bottom: 0.5rem;
+  align-items: center;
+}
+
+.navbar-left {
+  flex: 0 0 auto;
+}
+.navbar-center {
+  flex: 1;
+}
+.navbar-right {
+  flex: 0 0 auto;
 }
 
 .navbar-right button,
 .navbar-right input {
   margin: 0.25rem 0;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   padding: 0.75rem;
 }
 
 .search-container {
   display: flex;
-  width: 80%;
+  width: 100%;
 }
 
 .search-input {
@@ -60,6 +72,19 @@
   border-radius: 4px 0 0 4px;
   border: 1px solid #ccc;
   padding: 0.5rem;
+}
+
+.login-button,
+.signup-button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  max-width: none;
+}
+
+.login-button .login-text,
+.signup-button .signup-text {
+  display: inline;
 }
 
 .search-button {
@@ -72,13 +97,27 @@
   color: #fff;
   cursor: pointer;
   max-width: 50px;
+  justify-content: space-around;
 }
 
 .search-button .button-text {
   display: none;
 }
 
+@media (min-width: 1024px) {
+  .search-button {
+    max-width: none;
+    gap: 0.5rem;
+    display: flex;
+    align-items: center;
+  }
+
+  .search-button .button-text {
+    display: inline;
+  }
+}
+
 .logo-image {
-  height: 30px;
+  height: 2.4rem;
   width: auto;
 }
