--- a/YFF-React-Project/my-react-app/src/NavBar/hamburgerMenu.css
+++ b/YFF-React-Project/my-react-app/src/NavBar/hamburgerMenu.css
@@ -10,6 +10,9 @@
 }
 
 .menu-items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   position: absolute;
   top: calc(100% - 4px);
   right: 0;
@@ -19,7 +22,7 @@
   border-radius: 4px 0 4px 4px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  min-width: 200px;
+  min-width: 12.5rem;
   padding: 1rem;
   opacity: 0;
   transform-origin: top right;
@@ -38,10 +41,11 @@
 
 .menu-items .login-button,
 .menu-items .signup-button {
-  width: 4rem;
-  font-size: auto;
+  width: 80%;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .hamburger-icon {
@@ -55,4 +59,8 @@
   width: 40px;
   height: 40px;
   padding: 0;
+}
+
+.menu-items .nav-links {
+  display: inline-block;
 }
