--- a/YFF-React-Project/my-react-app/src/NavBar/navBar.css
+++ b/YFF-React-Project/my-react-app/src/NavBar/navBar.css
@@ -29,7 +29,6 @@
 .navbar {
   display: flex;
   align-items: center;
-  flex-direction: row;
   justify-content: center;
   background: var(--navbar-bg);
   color: var(--navbar-text);
@@ -72,7 +71,7 @@
 .search-container {
   display: flex;
   width: 100%;
-  max-width: 500px;
+  max-width: 31.25rem;
 }
 
 .search-input {
@@ -113,7 +112,7 @@
   background: var(--button-bg);
   color: var(--navbar-text);
   cursor: pointer;
-  max-width: 50px;
+  max-width: 3.125rem;
   justify-content: space-around;
 }
 
@@ -123,6 +122,23 @@
 
 .search-button .button-text {
   display: none;
+}
+
+.nav-links {
+  display: none;
+}
+
+li {
+  list-style: none;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: var(--navbar-text);
+}
+
+.nav-links a:visited {
+  color: var(--accent);
 }
 
 .logo-image {
@@ -149,5 +165,10 @@
 
   .search-button .button-text {
     display: inline;
+  }
+
+  .nav-links {
+    display: flex;
+    gap: 0.5rem;
   }
 }
